--- a/frontend/index/index.html
+++ b/frontend/index/index.html
@@ -7,6 +7,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="../CSS/finance-theme.css">
+    <script type="importmap">
+        {
+            "imports": {
+                "mathjs": "https://cdn.jsdelivr.net/npm/mathjs@14.0.1/+esm"
+            }
+        }
+    </script>
     <style>
         /* Estilos específicos para la calculadora para complementar finance-theme.css */
         .canvas-placeholder {
@@ -260,9 +267,8 @@
                                             <th>Momento (M)</th>
                                         </tr>
                                     </thead>
-                                    <tbody>
-                                        
-                                    </tbody>
+                                    <tbody id="tablaReaccionesBody">
+                                        </tbody>
                                 </table>
                             </div>
 
@@ -295,7 +301,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
     <script type="module" src="https://pyscript.net/releases/2026.1.1/core.js"></script>
-    <script src="../ui/diseño.ui.js"></script>
+    <script type="module" src="../ui/diseño.ui.js"></script>
 
 </body>
 </html>
